--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
-            "DI//src//": "src/"
+            "DI\\src\\": "src/"
         }
     }
 }
