--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,15 @@
         "psr/container": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.2"
+        "phpunit/phpunit": "^8.2",
+        "squizlabs/php_codesniffer": "^3.4",
+        "phpstan/phpstan": "^0.11.8"
     },
     "license": "GNU-3.0",
     "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
-            "DI\\src\\": "src/"
+            "DI\\": "src/"
         }
     }
 }
