--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: php
 php:
   - "7.3"
 
+install:
+  - composer install
+
 script:
   - ./vendor/bin/phpcs
   - ./vendor/bin/phpstan analyse
